# @EUGO_CHANGE
[build-system]

requires = [
    "scikit_build_core",
    "pybind11"
]
build-backend = "scikit_build_core.build"


[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/python"
files = [
    "python/triton/knobs.py",
    "python/triton/runtime/build.py",
    "python/triton/runtime/driver.py",
    "python/triton/_utils.py",
    "python/test/unit/test_knobs.py",
    "python/test/unit/runtime/test_build.py",
    "python/test/unit/runtime/test_compilation_listener.py",
]
exclude = ["/build/"]
follow_imports = "silent"


# @EUGO_CHANGE
[project]
name = "triton"
version = "3.2.0"  # @TODO+: Keep in sync with upstream version

# @EUGO_CHANGE
[tool.scikit-build]
sdist.exclude = []
install.strip = false  # Default value is `true`, but we perform stripping ourselves


# @EUGO_CHANGE
# IMPORTANT: we need to exclude them twice. First in `CMakeLists.txt` when copying python/triton (because they are nested there), and second here in `pyproject.toml` when they are copied together with library targets.
[tool.scikit-build.wheel]
exclude = [
    "triton/_C/include/**"
]


[tool.yapf]
based_on_style = "pep8"
column_limit = 120
disable_split_list_with_comment = true
each_dict_entry_on_separate_line=false
split_before_named_assigns = false
split_complex_comprehension = true

# We're incrementally switching from autopep8 to ruff.
[tool.autopep8]
aggressive = 1
ignore = "E501,E701,E731,W690,W503"
max_line_length = 88

[tool.yapfignore]
ignore_patterns = [
    # This exclusion is also specified in .pre-commit-config.yaml.
    # - We put it here because if you run yapf directly, we want it to skip the
    #   file.
    # - We also put it in .pre-commit-config because yapf raises an error if
    #   pre-commit runs it but all of the files it might touch are ignored!
    "python/test/unit/language/test_line_info.py"
]


[tool.ruff]
line-length = 120


[tool.ruff.lint]
ignore = ["E501", "E701", "E731", "E741"]
